k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: front-end
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
